Add method to ColorDetector to get the color from a specific position in a BasicElement Mark overload method in the ColorDetector which takes a WpfControl as Obsolete because the library is focus on BasicElements Add display of the SupportedPatterns in the AutomationElementFinder

--- a/DW.CodedUI.Demo/ControlsWindow.xaml
+++ b/DW.CodedUI.Demo/ControlsWindow.xaml
@@ -365,5 +365,9 @@
             </TreeView>
         </GroupBox>
 
+        <GroupBox Header="ColorDetector">
+            <TextBlock AutomationProperties.AutomationId="ColoredRectangleId" Background="Red" Height="140" Width="200" />
+        </GroupBox>
+        
     </UniformGrid>
 </Window>
