--- a/ElementFinder/MainView.xaml
+++ b/ElementFinder/MainView.xaml
@@ -26,7 +26,7 @@
                                 <Thumb DockPanel.Dock="Right" Cursor="SizeWE" Width="8" DragDelta="OnSizeDragDelta" />
 
                                 <StackPanel Orientation="Horizontal" DockPanel.Dock="Right" VerticalAlignment="Center">
-                                    <ToggleButton Content="e" IsChecked="{Binding IsEnabled}" Padding="4,0" ToolTip="Enable/Disable" />
+                                    <ToggleButton Content="e" IsChecked="{Binding IsEnabled}" Padding="4,0" ToolTip="Enable / Disable" />
                                     <Button Click="DoSwitchView" Padding="4,0" ToolTip="Switch to large view">
                                         <TextBlock Text="^" RenderTransformOrigin="0.5, 0.5">
                                             <TextBlock.RenderTransform>
@@ -69,6 +69,9 @@
                                 <ToolBar>
                                     <ToggleButton Content="Quick Search" IsChecked="{Binding QuickSearch}" ToolTip="Search only for the hovered element" />
                                 </ToolBar>
+                                <ToolBar>
+                                    <ToggleButton Content="Expanded" x:Name="PART_SearchExpanded" ToolTip="Expand / Collapse All" />
+                                </ToolBar>
                             </ToolBarTray>
                             
                             <StatusBar DockPanel.Dock="Bottom">
@@ -83,6 +86,11 @@
                                 </Grid.ColumnDefinitions>
                                 
                                 <TreeView ItemsSource="{Binding Elements}" SelectedItemChanged="HandleSelectedItemChanged">
+                                    <TreeView.ItemContainerStyle>
+                                        <Style TargetType="{x:Type TreeViewItem}">
+                                            <Setter Property="IsExpanded" Value="{Binding IsChecked, ElementName=PART_SearchExpanded, Mode=OneWay}" />
+                                        </Style>
+                                    </TreeView.ItemContainerStyle>
                                     <TreeView.ItemTemplate>
                                         <HierarchicalDataTemplate ItemsSource="{Binding Children}">
                                             <StackPanel Orientation="Horizontal">
@@ -116,7 +124,7 @@
                         </DockPanel>
 
                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Top">
-                            <ToggleButton Content="e" IsChecked="{Binding IsEnabled}" Padding="4,0" ToolTip="Enable/Disable" />
+                            <ToggleButton Content="e" IsChecked="{Binding IsEnabled}" Padding="4,0" ToolTip="Enable / Disable" />
                             <Button Content="^" Click="DoSwitchView" Padding="4,0" ToolTip="Switch to small view" />
                         </StackPanel>
                     </Grid>
