--- a/ElementFinder/MainView.xaml
+++ b/ElementFinder/MainView.xaml
@@ -1,6 +1,7 @@
 ﻿<Window x:Class="ElementFinder.LargeView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:ElementFinder="clr-namespace:ElementFinder"
         MouseLeftButtonDown="HandleMouseLeftButtonDown"
         x:Name="MainView"
         WindowStyle="None"
@@ -44,17 +45,11 @@
                                         <ColumnDefinition MinWidth="50" />
                                     </Grid.ColumnDefinitions>
 
-                                    <DockPanel>
-                                        <Button Content="c" DockPanel.Dock="Right" Padding="2,0" VerticalAlignment="Center" ToolTip="Copy AutomationId" />
-                                        <TextBox Text="{Binding CurrentElement.AutomationId, Mode=OneWay}" />
-                                    </DockPanel>
+                                    <ElementFinder:CopyableTextBox DockPanel.Dock="Right" Text="{Binding CurrentElement.AutomationId, Mode=OneWay}" CopyButtonToolTip="Copy AutomationId" />
 
                                     <GridSplitter Grid.Column="1" Width="2" ResizeBehavior="PreviousAndNext" />
 
-                                    <DockPanel Grid.Column="2">
-                                        <Button Content="c" DockPanel.Dock="Right" Padding="2,0" VerticalAlignment="Center" ToolTip="Copy Name" />
-                                        <TextBox Text="{Binding CurrentElement.Name, Mode=OneWay}" />
-                                    </DockPanel>
+                                    <ElementFinder:CopyableTextBox Grid.Column="2" DockPanel.Dock="Right" Text="{Binding CurrentElement.Name, Mode=OneWay}" CopyButtonToolTip="Copy Name" />
                                 </Grid>
 
                             </DockPanel>
