--- a/ElementFinder/Themes/Generic.xaml
+++ b/ElementFinder/Themes/Generic.xaml
@@ -3,13 +3,14 @@
                     xmlns:ElementFinder="clr-namespace:ElementFinder">
 
     <Style TargetType="{x:Type ElementFinder:CopyableTextBox}">
+        <Setter Property="IsReadOnly" Value="True" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type ElementFinder:CopyableTextBox}">
-                    <DockPanel>
-                        <Button DockPanel.Dock="Right" Content="c" Padding="4,0" VerticalAlignment="Center" x:Name="PART_CopyButton" ToolTip="{TemplateBinding CopyButtonToolTip}" />
+                    <Grid>
                         <TextBox Text="{TemplateBinding Text}" IsReadOnly="True" />
-                    </DockPanel>
+                        <Button Content="c" Padding="4,0" Margin="0,0,2,1" HorizontalAlignment="Right" VerticalAlignment="Center" x:Name="PART_CopyButton" ToolTip="{TemplateBinding CopyButtonToolTip}" />
+                    </Grid>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
